[project]
name = "epstein-emails-explorer"
version = "0.1.0"
description = "Static, client-side Epstein email explorer builder"
authors = [{name = "Epstein Explorer", email = "noreply@example.com"}]
requires-python = ">=3.13"
dependencies = [
    "datasets>=2.20.0",
    "python-dateutil>=2.9.0",
    "scikit-learn>=1.4.0",
    "sentence-transformers>=2.7.0",
    "Brotli>=1.1.0",
]

[tool.uv]
python-preference = "system"
# uv will create .venv with the requested interpreter
